fix overflow on mobile
- Long headers (specifically on cv) were causing scrolling overflow to
happen on small screens
- Changed card title font size to fluid-2

--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -127,6 +127,7 @@ main.post {
     background: var(--pink-2);
     border: var(--border-size-2) solid;
     box-shadow: var(--size-1) var(--size-1) var(--gray-12);
+    font-size: var(--font-size-fluid-2);
     margin: var(--size-fluid-1);
     max-width: var(--size-content-3);
     text-align: center;
